<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="top"
        android:orientation="horizontal"
        android:padding="5dp">

    <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="top"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_access_time_black_24dp" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">

        <TextView
                android:id="@+id/recentPlaceTitleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/sample_place"
                android:textColor="#000"
                android:textSize="16sp" />

        <TextView
                android:id="@+id/recentPlaceFormattedAddressTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/sample_place_formatted_address"
                android:textSize="12sp" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#5BBEBEBE">

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
