<?xml version="1.0" encoding="utf-8"?>

<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
            android:background="#fff"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".trash.search_experts.SearchExpertsActivity">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="120dp">

                    <android.support.v7.widget.RecyclerView
                            android:id="@+id/searchResultsRV"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    <LinearLayout
                            android:visibility="gone"
                            android:id="@+id/noPlacesFoundLL"
                            android:layout_marginTop="50dp"
                            android:orientation="vertical"
                            android:gravity="center_horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                        <TextView
                                android:textColor="#000"
                                android:text="@string/location_not_found"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        <TextView
                                android:layout_marginTop="5dp"
                                android:text="@string/please_check_spell_errors"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp">

                    <android.support.v7.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:cardElevation="3dp">

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="85dp"
                                android:background="#ffffff"
                                android:orientation="vertical">

                            <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="15dp"
                                    android:layout_marginTop="15dp"
                                    android:gravity="start|center"
                                    android:orientation="horizontal"
                                    android:layout_marginStart="15dp">

                                <ImageButton
                                        android:id="@+id/backImageBtn"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:background="#00000000"
                                        android:cropToPadding="true"
                                        android:padding="5dp"
                                        android:src="@drawable/ic_arrow_back_black_24dp"
                                        android:contentDescription="@string/todo"/>

                                <TextView
                                        android:id="@+id/searchTitleTV"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="10dp"
                                        android:text="@string/search_title"
                                        android:textColor="#000000"
                                        android:textSize="18sp"/>
                            </LinearLayout>
                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                </LinearLayout>

                <android.support.v7.widget.CardView
                        android:transitionName="@string/searchPlaceHolder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="60dp"
                        app:cardElevation="2dp">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="47dp"
                            android:gravity="start|center_vertical"
                            android:orientation="horizontal">

                        <ImageButton
                                android:id="@+id/imageButton2"
                                android:layout_width="wrap_content"
                                android:layout_height="30dp"
                                android:layout_marginLeft="10dp"
                                android:background="#00000000"
                                android:cropToPadding="true"
                                android:padding="5dp"
                                android:src="@drawable/ic_search_black_24dp"
                                android:layout_marginStart="10dp"
                                android:contentDescription="@string/todo"/>


                        <FrameLayout android:layout_width="match_parent"
                                     android:layout_height="match_parent">


                            <EditText
                                    android:singleLine="true"
                                    android:layout_gravity="center_vertical"
                                    android:id="@+id/placeNamET"
                                    android:layout_width="match_parent"
                                    android:layout_height="30dp"
                                    android:layout_marginLeft="10dp"
                                    android:hint="@string/enter_location_hint"
                                    android:background="#00000000"
                                    android:textColorHint="#79646464"
                                    android:textColor="#000"
                                    android:textSize="16sp"
                                    android:layout_marginStart="10dp">

                                <requestFocus/>

                            </EditText>


                            <ProgressBar
                                    android:layout_marginRight="5dp"
                                    android:layout_gravity="end|center_vertical"
                                    android:visibility="gone"
                                    android:id="@+id/searchProgressBar"
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:layout_marginEnd="5dp"/>
                        </FrameLayout>


                    </LinearLayout>


                </android.support.v7.widget.CardView>


            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</layout>

